--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>About me</title>
+	<link rel="stylesheet" type="text/css" href="aboutme-style.css">
+</head>
+<body>
+	<h2>About Allanazarov Madiyorbek</h2>
+	<p>My name is Madiyorbek and i am <strong>active</strong>, <strong>ethsuiastic</strong> and <strong>open-minded</strong>.<br>
+	I study at Inha university in Tashkent.</p>
+	<h3>My Classes This Quarter
+		<ul>
+			<div><li>SP1-System Programming</li>
+			<li>EM5-Engineering Mathematics</li>
+			<li>CA4-Compter Architecture</li>
+			<li>SP1-System Programming</li>
+			<li>IP4-Internet Programming</li>
+			</div>
+		</ul>
+	</h3>
+	<h3>My Favorite Movies
+		<div>
+			<ol>
+				<li>The Persuide Of Happiness(<a href="https://www.youtube.com/watch?v=89Kq8SDyvfg">IMDB</a>)</li>
+				<li>Harry Potter(<a href="https://www.youtube.com/watch?v=iGLCR7vo_6I">IMDB</a>)</li>
+				<li>Exam(<a href="https://www.youtube.com/watch?v=-rQWlr1nzkI">IMDB</a>)</li>
+			</ol>
+		</div>
+	</h3>
+	<h3>My Mood<br>
+		<img src="happymood.jfif">
+	</h3>
+	<h3 >Fun Facts About My Neighbours
+		<ul class="neighbours">
+			<li>Rasul: sleeps with phone</li>
+			<li>Farruh: Can't live without watching football</li>
+		</ul>
+	</h3>
+		
 
+</body>
+</html>
